--- a/source/Fasciculus.Eve/Pages/IndustryPage.xaml
+++ b/source/Fasciculus.Eve/Pages/IndustryPage.xaml
@@ -32,15 +32,23 @@
             <views:NavBarView FlexLayout.Basis="44" />
             <ScrollView FlexLayout.Grow="1" Padding="14" VerticalScrollBarVisibility="Always">
                 <VerticalStackLayout>
-                    <HorizontalStackLayout Spacing="14">
-                        <Label Text="Industry System" VerticalTextAlignment="Center" />
-                        <Border Padding="0">
-                            <Picker ItemsSource="{Binding SolarSystems}" SelectedItem="{Binding SelectedSolarSystem}" IsEnabled="{Binding NotRunning}" WidthRequest="160" />
-                        </Border>
-                        <Label Text="Hauler" VerticalTextAlignment="Center" />
-                        <Border Padding="0">
-                            <Picker ItemsSource="{Binding Haulers}" SelectedIndex="{Binding SelectedHauler}" IsEnabled="{Binding NotRunning}" WidthRequest="320" />
-                        </Border>
+                    <HorizontalStackLayout Spacing="28">
+                        <HorizontalStackLayout Spacing="14">
+                            <Label Text="Industry System" VerticalTextAlignment="Center" />
+                            <Border Padding="0">
+                                <Picker ItemsSource="{Binding SolarSystems}" SelectedItem="{Binding SelectedSolarSystem}" IsEnabled="{Binding NotRunning}" WidthRequest="160" />
+                            </Border>
+                        </HorizontalStackLayout>
+                        <HorizontalStackLayout Spacing="14">
+                            <Label Text="Hauler" VerticalTextAlignment="Center" />
+                            <Border Padding="0">
+                                <Picker ItemsSource="{Binding Haulers}" SelectedIndex="{Binding SelectedHauler}" IsEnabled="{Binding NotRunning}" WidthRequest="300" />
+                            </Border>
+                        </HorizontalStackLayout>
+                        <HorizontalStackLayout Spacing="14">
+                            <Label Text="Ignore Skills" VerticalTextAlignment="Center" />
+                            <CheckBox IsChecked="{Binding IgnoreSkills}" IsEnabled="{Binding NotRunning}" />
+                        </HorizontalStackLayout>
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,7,0,0">
                         <Button Text="Start" Command="{Binding StartCommand}" WidthRequest="60" />
