--- a/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
+++ b/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
@@ -39,14 +39,18 @@
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,0">
                         <Label Text="Customs Tax Rate" WidthRequest="120" />
                         <Label Text="{Binding CustomsTaxRate}" WidthRequest="60" HorizontalTextAlignment="End" />
-                        <Button Text="-" Command="{Binding DecrementCustomsTaxRateCommand}" IsVisible="{Binding NotRunning}" />
-                        <Button Text="+" Command="{Binding IncrementCustomsTaxRateCommand}" IsVisible="{Binding NotRunning}" />
+                        <HorizontalStackLayout Spacing="4">
+                            <Button Text="-" Command="{Binding DecrementCustomsTaxRateCommand}" IsVisible="{Binding NotRunning}" WidthRequest="20" />
+                            <Button Text="+" Command="{Binding IncrementCustomsTaxRateCommand}" IsVisible="{Binding NotRunning}" WidthRequest="20" />
+                        </HorizontalStackLayout>
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,0">
                         <Label Text="Sales Tax Rate" WidthRequest="120" />
                         <Label Text="{Binding SalesTaxRate}" WidthRequest="60" HorizontalTextAlignment="End" />
-                        <Button Text="-" Command="{Binding DecrementSellTaxRateCommand}" IsVisible="{Binding NotRunning}" />
-                        <Button Text="+" Command="{Binding IncrementSellTaxRateCommand}" IsVisible="{Binding NotRunning}" />
+                        <HorizontalStackLayout Spacing="4">
+                            <Button Text="-" Command="{Binding DecrementSellTaxRateCommand}" IsVisible="{Binding NotRunning}" WidthRequest="20" />
+                            <Button Text="+" Command="{Binding IncrementSellTaxRateCommand}" IsVisible="{Binding NotRunning}" WidthRequest="20" />
+                        </HorizontalStackLayout>
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,28,0,0">
                         <Button Text="Start" Command="{Binding StartCommand}" WidthRequest="60" />
