--- a/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
+++ b/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
@@ -111,7 +111,7 @@
                                         <Label Text="{Binding Type.Name}" WidthRequest="200" Padding="60,0,0,0" />
                                         <Label Text="{Binding Level}" WidthRequest="30" />
                                         <Label Text="{Binding Quantity}" WidthRequest="30" HorizontalTextAlignment="End" />
-                                        <controls:IskLabel Value="{Binding TotalCost}" WidthRequest="60" />
+                                        <controls:IskLabel Value="{Binding Cost}" WidthRequest="60" />
                                     </HorizontalStackLayout>
                                 </DataTemplate>
                             </CollectionView.ItemTemplate>
