--- a/source/Fasciculus.Eve.Assets/Resources/Styles/Styles.xaml
+++ b/source/Fasciculus.Eve.Assets/Resources/Styles/Styles.xaml
@@ -228,6 +228,8 @@
 
     <Style TargetType="ProgressBar">
         <Setter Property="ProgressColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+        <Setter Property="BackgroundColor" Value="LightGray" />
+        <Setter Property="MinimumHeightRequest" Value="8" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
